bluec-tests/tests/invalid/functions/static_fun_decl_for_loop.c
int main(void) {
    for (static int f(void); ; ) {
        return 0;
    }
}